k8s/registry/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: jfrog.dofuta.site
    http:
      paths:
      - path: /v2/
        pathType: Prefix
        backend:
          service:
            name: docker-registry
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry-ui
            port:
              number: 80
